# SCC

./: CMakeLists.txt  README.md  example.cpp
SCC/: CMakeLists.txt  SCC.cpp  SCC.h
SCC/kmeans/: KMeansRexCore.cpp  KMeansRexCoreInterface.h  simple_demo.cpp
data/: data.txt  point.txt
